--- a/.github/workflows/AutoIssueSSLCert.yml
+++ b/.github/workflows/AutoIssueSSLCert.yml
@@ -28,17 +28,16 @@ jobs:
       run: |
         mkdir -p ./Certs
         $ACME --register-account  -m "$ACMEMAIL" --server zerossl
-        # Wildcard certificate example.
-        # replace 'domain.com' with your own domain name.
-        # Replace '[DNS]' with the DNS provider used for your own domain name.
-        $ACME --issue --server zerossl --dns [DNS] -d *.domain.com -d domain.com
-        $ACME --installcert -d *.domain.com --key-file ./Certs/*.domain.com.key --fullchain-file ./Certs/*.domain.com.cer
+        $ACME --issue --server zerossl --dns dns_dp -d *.yareiy.com -d yareiy.com
+        $ACME --installcert -d *.yareiy.com --key-file ./Certs/*.yareiy.com.key --fullchain-file ./Certs/*.yareiy.com.cer
+        $ACME --issue --server zerossl --dns dns_cf -d *.yareiy.eu.org -d yareiy.eu.org
+        $ACME --installcert -d *.yareiy.eu.org --key-file ./Certs/*.yareiy.eu.org.key --fullchain-file ./Certs/*.yareiy.eu.org.cer
         zip -rP "$ZIPPWD" Certs.zip Certs
     - name: Commit
       run: |
         # Replace 'you@example.com' and 'yourname' with your own email and user name
-        git config --global user.email you@example.com
-        git config --global user.name yourname
+        git config --global user.email zhzhu722@yareiy.com
+        git config --global user.name Reiyy
         git add ./Certs.zip
         git commit -m "Update Certs" -a
     - name: Push
