--- a/.github/workflows/AutoIssueSSLCert.yml
+++ b/.github/workflows/AutoIssueSSLCert.yml
@@ -31,6 +31,8 @@ jobs:
         $ACME --register-account  -m "$ACMEMAIL" --server zerossl
         $ACME --issue --server zerossl --dns dns_dp -d *.yareiy.com -d yareiy.com
         $ACME --installcert -d *.yareiy.com --key-file ./Certs/*.yareiy.com.key --fullchain-file ./Certs/*.yareiy.com.cer
+        $ACME --issue --server zerossl --dns dns_cf -d *.yareiy.eu.org -d yareiy.eu.org
+        $ACME --installcert -d *.yareiy.eu.org --key-file ./Certs/*.yareiy.eu.org.key --fullchain-file ./Certs/*.yareiy.eu.org.cer
         $ACME --issue --server zerossl --dns dns_cf -d *.reiyy.eu.org -d reiyy.eu.org
         $ACME --installcert -d *.reiyy.eu.org --key-file ./Certs/*.reiyy.eu.org.key --fullchain-file ./Certs/*.reiyy.eu.org.cer
         zip -rP "$ZIPPWD" Certs.zip Certs
