--- a/.github/workflows/AutoIssueSSLCert.yml
+++ b/.github/workflows/AutoIssueSSLCert.yml
@@ -1,9 +1,9 @@
 name: AutoIssueSSLCert
 
 on:
-  schedule:
+#  schedule:
   # Configure appropriate periodic execution times.
-    - cron: "0 2 1 * *"
+#    - cron: "0 2 1 * *"
   watch:
     types: [started]
 
