--- a/.github/workflows/AutoIssueSSLCert.yml
+++ b/.github/workflows/AutoIssueSSLCert.yml
@@ -25,9 +25,12 @@ jobs:
         wget -O -  https://get.acme.sh | sh -s email="$ACMEMAIL"
         $ACME --upgrade
         echo "$DNSAPI" >> /home/runner/.acme.sh/account.conf
+        apt-get install -y idn
     - name: Issue & Deploy Certificates
       run: |
         mkdir -p ./Certs
+        $ACME --issue --server zerossl --dns dns_cf -d *.唯.page -d 唯.page
+        $ACME --installcert -d *.唯.page --key-file ./Certs/*.唯.page.key --fullchain-file ./Certs/*.唯.page.cer
         $ACME --register-account  -m "$ACMEMAIL" --server zerossl
         $ACME --issue --server zerossl --dns dns_dp -d *.yareiy.com -d yareiy.com
         $ACME --installcert -d *.yareiy.com --key-file ./Certs/*.yareiy.com.key --fullchain-file ./Certs/*.yareiy.com.cer
@@ -35,8 +38,6 @@ jobs:
         $ACME --installcert -d *.reiyy.com --key-file ./Certs/*.reiyy.com.key --fullchain-file ./Certs/*.reiyy.com.cer
         $ACME --issue --server zerossl --dns dns_cf -d *.reiyy.eu.org -d reiyy.eu.org
         $ACME --installcert -d *.reiyy.eu.org --key-file ./Certs/*.reiyy.eu.org.key --fullchain-file ./Certs/*.reiyy.eu.org.cer
-        $ACME --issue --server zerossl --dns dns_cf -d *.唯.page -d 唯.page
-        $ACME --installcert -d *.唯.page --key-file ./Certs/*.唯.page.key --fullchain-file ./Certs/*.唯.page.cer
         zip -rP "$ZIPPWD" Certs.zip Certs
     - name: Commit
       run: |
