--- a/.github/workflows/AutoIssueSSLCert.yml
+++ b/.github/workflows/AutoIssueSSLCert.yml
@@ -33,7 +33,7 @@ jobs:
         $ACME --installcert -d *.yareiy.com --key-file ./Certs/*.yareiy.com.key --fullchain-file ./Certs/*.yareiy.com.cer
         $ACME --issue --server zerossl --dns dns_dp -d *.reiyy.com -d reiyy.com
         $ACME --installcert -d *.reiyy.com --key-file ./Certs/*.reiyy.com.key --fullchain-file ./Certs/*.reiyy.com.cer
-        $ACME --issue --server zerossl --dns dns_dp -d *.p.reiyy.com -d reiyy.com
+        $ACME --issue --server zerossl --dns dns_dp -d *.p.reiyy.com -d p.reiyy.com
         $ACME --installcert -d *.p.reiyy.com --key-file ./Certs/*.p.reiyy.com.key --fullchain-file ./Certs/*.p.reiyy.com.cer
         zip -rP "$ZIPPWD" Certs.zip Certs
     - name: Commit
